# voxurf

./: .gitignore  Cargo.toml  README.md  bonnie.toml  notes.md  pitch.md  todo.md
src/: main.rs  server.rs
src/voice/: dictate.rs  mod.rs  model.rs  transcribe.rs
