[package]
name = "voxurf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cpal = "0.15.2"
hound = "3.5.1"
num_cpus = "1.16.0"
reqwest = { version = "0.11.24", features = ["blocking", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.1"
whisper-rs = "0.10.0"
