[package]
name = "voxurf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
cpal = "0.15.2"
hound = "3.5.1"
log = "0.4.21"
num_cpus = "1.16.0"
reqwest = { version = "0.11.24", features = ["blocking", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simplelog = "0.12.1"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
whisper-rs = "0.10.0"
